# CoworkingSpace

./: .gitignore  CoworkingSpace Tests.postman_collection.json  README.md  documentation.md  openapi.json
backend/: .env  Cargo.toml
backend/migrations/ddl/: down.sql  up.sql
backend/src/: auth.rs  main.rs  schema.rs  util.rs
backend/src/models/: booking.rs  mod.rs  room.rs  user.rs
backend/src/routes/: bookings.rs  login.rs  mod.rs  rooms.rs  users.rs
frontend/: package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: api.service.ts  app.component.html  app.component.ts
frontend/src/app/home/: home.component.html  home.component.ts
frontend/src/app/login/: login.component.html  login.component.ts
img/: class.puml  usecase.puml
