[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
jwt-simple = "0.12.9"
log = "0.4.22"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_http = "0.5.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
simplelog = "0.12.2"
